@@ -4,6 +4,9 @@ Revision history for {{ $dist->name }}:
   [Documentation]
   - Added a ROADMAP section for planned changes.
 
+  [Tests]
+  - Use Test::TypeTiny for testing.
+
 v0.3.3    2018-11-10 22:06:06+00:00 Europe/London
   [Bug Fix]
   - Uses version modeule for older Perls than cannot handle tuple
